--- a/ros-sharp-master/ros-sharp-master/Libraries/RosBridgeClientTest/packages.config
+++ b/ros-sharp-master/ros-sharp-master/Libraries/RosBridgeClientTest/packages.config
@@ -19,4 +19,6 @@
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="Unity" version="5.11.10" targetFramework="net461" />
+  <package id="UnityEngine" version="1.0.0" targetFramework="net461" />
 </packages>
