--- a/ros-sharp-master/ros-sharp-master/Libraries/ConsoleApp1/ConsoleApp1.csproj
+++ b/ros-sharp-master/ros-sharp-master/Libraries/ConsoleApp1/ConsoleApp1.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Unity" Version="5.11.10" />
+    <PackageReference Include="UnityEngine" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
