--- a/ros-sharp-master/ros-sharp-master/Libraries/RosBridgeClient/packages.config
+++ b/ros-sharp-master/ros-sharp-master/Libraries/RosBridgeClient/packages.config
@@ -16,5 +16,7 @@
   <package id="System.Threading.Channels" version="4.7.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="Unity" version="5.11.10" targetFramework="net461" />
+  <package id="UnityEngine" version="1.0.0" targetFramework="net461" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net461" />
 </packages>
