--- a/ros-sharp-master/ros-sharp-master/Libraries/RosBridgeClient/packages.config
+++ b/ros-sharp-master/ros-sharp-master/Libraries/RosBridgeClient/packages.config
@@ -8,6 +8,7 @@
   <package id="SolidEdge.Community.AddIn" version="219.0.0" targetFramework="net461" />
   <package id="SolidEdge.Community.Reader" version="2.0.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="5.0.2" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net461" />
