--- a/ros-sharp-master/ros-sharp-master/Libraries/UrdfTest/packages.config
+++ b/ros-sharp-master/ros-sharp-master/Libraries/UrdfTest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="System.Drawing.Common" version="5.0.2" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="Unity" version="5.11.10" targetFramework="net461" />
   <package id="UnityEngine" version="1.0.0" targetFramework="net461" />
