--- a/ros-sharp-master/ros-sharp-master/Libraries/RosBridgeClientTest/packages.config
+++ b/ros-sharp-master/ros-sharp-master/Libraries/RosBridgeClientTest/packages.config
@@ -2,10 +2,14 @@
 <packages>
   <package id="Interop.SolidEdge" version="220.2.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net461" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Simplify.Resources" version="1.0.1" targetFramework="net461" />
+  <package id="Simplify.Windows.Forms" version="1.1.0" targetFramework="net461" />
   <package id="SolidEdge.Community" version="219.0.0" targetFramework="net461" />
   <package id="SolidEdge.Community.AddIn" version="219.0.0" targetFramework="net461" />
   <package id="SolidEdge.Community.Reader" version="2.0.0" targetFramework="net461" />
