--- a/ros-sharp-master/ros-sharp-master/Libraries/ConsoleApp1/ConsoleApp1.csproj
+++ b/ros-sharp-master/ros-sharp-master/Libraries/ConsoleApp1/ConsoleApp1.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.WindowsAPICodePack-Shell" Version="1.1.0" />
+    <PackageReference Include="Simplify.Windows.Forms" Version="1.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     <PackageReference Include="Unity" Version="5.11.10" />
     <PackageReference Include="UnityEngine" Version="1.0.0" />
