--- a/ros-sharp-master/ros-sharp-master/Libraries/RosBridgeClient/packages.config
+++ b/ros-sharp-master/ros-sharp-master/Libraries/RosBridgeClient/packages.config
@@ -2,8 +2,12 @@
 <packages>
   <package id="Interop.SolidEdge" version="219.0.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net461" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net461" />
+  <package id="Simplify.Resources" version="1.0.1" targetFramework="net461" />
+  <package id="Simplify.Windows.Forms" version="1.1.0" targetFramework="net461" />
   <package id="SolidEdge.Community" version="219.0.0" targetFramework="net461" />
   <package id="SolidEdge.Community.AddIn" version="219.0.0" targetFramework="net461" />
   <package id="SolidEdge.Community.Reader" version="2.0.0" targetFramework="net461" />
