--- a/SolidEdge Universal Robots Simulation/RosBridgeClientTest/SolidEdge_UR_Robot_Simulation.csproj
+++ b/SolidEdge Universal Robots Simulation/RosBridgeClientTest/SolidEdge_UR_Robot_Simulation.csproj
@@ -10,7 +10,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RosBridgeClientTest</RootNamespace>
-    <AssemblyName>RosBridgeClientTest</AssemblyName>
+    <AssemblyName>SolidEdge_UR_Robot_Simulation</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -40,6 +40,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+  </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Interop.SolidEdge, Version=220.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -133,15 +136,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FibonacciActionClientConsoleExample.cs" />
-    <Compile Include="FibonacciActionServerConsoleExample.cs" />
-    <Compile Include="RosSocketConsoleExampleTestProtocol.cs" />
-    <Compile Include="UrdfTransferFromRosConsoleExample.cs" />
     <Compile Include="RosSocketConsoleExample.cs" />
-    <Compile Include="RosSocketTests.cs" />
-    <Compile Include="RosCommunicationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UrdfTransferToRosConsoleExample.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RosBridgeClient\RosBridgeClient.csproj">
